tests/error/inout_errors/drop_after_call.py
from guppylang.decorator import guppy
from guppylang.std.quantum import qubit


@guppy.declare
def foo(q: qubit) -> None: ...


@guppy
def test() -> None:
   foo(qubit())


guppy.compile(test)
